--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,7 @@ authors = [
 ]
 
 classifiers = []
-dependencies = [
-    "pydantic >=2.0"
-]
+dependencies = []
 
 [project.urls]
 homepage = "https://github.com/nimaid/python-etatime"
