--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,9 @@ authors = [
 ]
 
 classifiers = []
-dependencies = []
+dependencies = [
+    "onecondition >=0.1.2"
+]
 
 [project.urls]
 homepage = "https://github.com/nimaid/python-etatime"
