--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ authors = [
 
 classifiers = []
 dependencies = [
-    "onecondition >=0.1.2"
+    "onecondition >=0.1.2",
+    "tqdm >=4.66.1"
 ]
 
 [project.urls]
