--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,17 +4,26 @@ build-backend = "flit_core.buildapi"
 
 [project]
 name = "etatime"
-requires-python = ">3.10"
 dynamic = ["version", "description"]
-readme = "README_pypi.md"
+readme = "README.md"
+requires-python = ">=3.10"
 license= {file = "LICENSE"}
 authors = [
     {name = "Ella Jameson", email = "ellagjameson@gmail.com"}
 ]
 
-classifiers = []
+classifiers = [
+    "Development Status :: 5 - Production/Stable",
+    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3 :: Only",
+]
 dependencies = [
-    "timefmt >=0.1.0",
+    "timefmt >=1.0.0",
     "tqdm >=4.66.1"
 ]
 
